# AiResumeAnalyser

./: README.md  main.py  pyproject.toml
